--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     <div class="card">
       <h2 class="section-title">PERSONAL INFORMATION</h2>
       <div class="p1-row">
-        <label for="sarNick">please enter your name</label>
+        <label for="sarNick">your name</label>
         <input id="sarNick" type="text"/>
       </div>
       <div class="p1-row">
-        <label for="sarEmail">your email address</label>
+        <label for="sarEmail">your email</label>
         <input id="sarEmail" type="email"/>
       </div>
       <div class="p1-row">
-        <label for="sarHotel">select your location</label>
+        <label for="sarHotel">your location</label>
         <select id="sarHotel">
           <option value="">select hotel</option>
           <option>BED Changkian</option>
@@ -88,15 +88,15 @@
       <h2 class="section-title">PEER INFORMATION</h2>
       <div class="muted" style="font-weight:700;margin:4px 0 12px;">the person that will review you must have been in BED for at least 12 months</div>
       <div class="p1-row">
-        <label for="peerName">name of your peer reviewer</label>
+        <label for="peerName">peer name</label>
         <input id="peerName" type="text"/>
       </div>
       <div class="p1-row">
-        <label for="peerEmail">email address of your peer reviewer</label>
+        <label for="peerEmail">peer email</label>
         <input id="peerEmail" type="email"/>
       </div>
       <div class="p1-row">
-        <label for="peerHotel">select peer location</label>
+        <label for="peerHotel">peer location</label>
         <select id="peerHotel">
           <option value="">select hotel</option>
           <option>BED Changkian</option>
